--- a/background.html
+++ b/background.html
@@ -3,4 +3,9 @@
 	<head>
 		<script type="text/javascript" src="background.js"></script>
 	</head>
+
+	<h1>Time for Math!</h1>
+	<h2>What is 2 + 2?</h2>
+	<input type="text">
+	<button onclick="modifyGeoff()"></button>
 </html>
