--- a/background.html
+++ b/background.html
@@ -13,6 +13,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="jquery-3.0.0.min.js"></script>
 <script src="background.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
