--- a/questionform.html
+++ b/questionform.html
@@ -13,20 +13,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="jquery-3.0.0.min.js"></script>
 <script src="background.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-<h2>Animated Modal with Header and Footer</h2>
+<h2>Do Math!</h2>
+<button onclick="window.keepGoing()">CLICK ME!</button>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- The Modal -->
+<!-- <button id="myBtn">Open Modal</button>
 <div id="myModal" class="modal">
-
-  <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">x</span>
@@ -40,8 +38,7 @@
       <h3>Modal Footer</h3>
     </div>
   </div>
-
 </div>
-
+ -->
 </body>
 </html>
