--- a/questionform.html
+++ b/questionform.html
@@ -15,12 +15,15 @@
 <head>
 <script src="jquery-3.0.0.min.js"></script>
 <script src="background.js"></script>
+<script src="questions.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-<h2>Do Math!</h2>
-<button onclick="window.keepGoing()">CLICK ME!</button>
+<h2>Solve this!</h2>
+<h3 id="question"></h3>
+<input type="text" id="answer">
+<button class="submitQuestion">CLICK ME!</button>
 
 <!-- Trigger/Open The Modal -->
 <!-- <button id="myBtn">Open Modal</button>
