--- a/questionform.html
+++ b/questionform.html
@@ -16,14 +16,22 @@
 <script src="jquery-3.0.0.min.js"></script>
 <script src="questions.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
-<body>
-
-<h2>Solve this!</h2>
-<h3 id="question"></h3>
-<input type="text" id="answer">
-<button class="submitQuestion">CLICK ME!</button>
-
+<body class="container">
+  <div class="centered">
+    <h2>Solve this!</h2>
+    <h3 id="question"></h3>
+    <input type="text" id="answer">
+    <button class="submitQuestion btn btn-submit">CLICK ME!</button>
+  </div>
 <!-- Trigger/Open The Modal -->
 <!-- <button id="myBtn">Open Modal</button>
 <div id="myModal" class="modal">
