--- a/questionform.html
+++ b/questionform.html
@@ -1,15 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-	<head>
-		<script type="text/javascript" src="background.js"></script>
-	</head>
-
-	<h1>Time for Math!</h1>
-	<h2>What is 2 + 2?</h2>
-	<input type="text">
-	<button onclick="modifyGeoff()"></button>
-</html>
- -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,25 +18,7 @@
     <h2>Solve this!</h2>
     <h3 id="question"></h3>
     <input type="text" id="answer">
-    <button class="submitQuestion btn btn-submit">CLICK ME!</button>
+    <button class="submitQuestion btn btn-submit">Submit Answer</button>
   </div>
-<!-- Trigger/Open The Modal -->
-<!-- <button id="myBtn">Open Modal</button>
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <div class="modal-header">
-      <span class="close">x</span>
-      <h2>Modal Header</h2>
-    </div>
-    <div class="modal-body">
-      <p>Some text in the Modal Body</p>
-      <p>Some other text...</p>
-    </div>
-    <div class="modal-footer">
-      <h3>Modal Footer</h3>
-    </div>
-  </div>
-</div>
- -->
 </body>
 </html>
