--- a/popup.html
+++ b/popup.html
@@ -1,38 +1,21 @@
 <!doctype html>
 
-<!--  This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
-    <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
-    </style>
- 
-    
-<!--       - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
- -->
-<script src="popup.js"></script>
+    <title>TutorMom Settings</title>
+  <script src="jquery-3.0.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="popup.style.css">
+  <script src="popup.js"></script>
   </head>
-  <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
-    <button onclick="">CLICK ME!</button>
+  <body class="container">
+    <h2>Update your stuff!</h2>
+    <label>Start Time</label>
+    <input class="option" id="start">
+    <label>Stop Time</label>
+    <input class="option" id="stop">
+    <label>Sessions per Day</label>
+    <input class="option" id="sessions">
+    <button id="update">Update</button>
   </body>
 </html>
- 
