pull geoff, pull!

--- a/questionform.html
+++ b/questionform.html
@@ -15,12 +15,12 @@
 </head>
 <body background="org.jpg" class="container">
   <div class="centered col-xs-12">
-    <h2><span class="label label-pill label-primary">Solve This!</span></h2>
+    <h2><span id="category" class="label label-pill label-primary"></span></h2>
     <h3 id="question"></h3>
   	<div class="form-group">
   	  <input type="text" class="form-control" id="answer">
   	</div>
-    <button id="submit" class="btn btn-submit submit submitQuestion">Submit</button>
+    <button id="submit" class="btn btn-submit btn-success submit submitQuestion">Submit</button>
   </div>
 </body>
 </html>
