--- a/questionform.html
+++ b/questionform.html
@@ -16,6 +16,7 @@
 <body background="org.jpg" class="container">
   <div class="centered col-xs-12">
     <h2><span id="category" class="label label-pill label-primary"></span></h2>
+    <h2><span id="difficulty" class="label label-pill label-primary"></span></h2>
     <h3 id="question"></h3>
   	<div class="form-group">
   	  <input type="text" class="form-control" id="answer">
